# penelopise

./: .buildinfo  .git-blame-ignore-revs  .gitignore  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  todo_txt.py
.github/workflows/: pytest.yml  ruff.yml  sphinx.yml
doc/: conf.py  index.rst
extra/: requirements-lint.txt  requirements-test.txt  requirements.txt
src/penelopise/: __init__.py
tests/: strategies.py  test_comparison.py  test_hypothesis.py  test_implementation_details.py  test_metamorphic.py  test_modification.py  test_parsing.py  test_properties.py  test_regression.py  test_under_specified.py  test_underspecified.py  test_upstream_examples.py
