[project]
name = "penelopise"
version = "0.1.0"
description = "Minimal todo.txt parsing"
readme = "README.rst"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "James Rowe", email = "jnrowe@gmail.com" }]
keywords = ["todo.txt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: DFSG approved",
  "License :: OSI Approved",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: File Formats",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Filters",
  "Topic :: Text Processing :: Markup",
]
dependencies = ["attrs>=23.2.0"]

[project.urls]
Documentation = "https://jnrowe.github.io/penelopise/"
"Source code" = "https://github.com/JNRowe/penelopise"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]
doc = ["sphinx>=8.0"]
lint = ["ruff>=0.4"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
