[project]
name = "penelopise"
version = "0.1.0"
description = "Minimal todo.txt parsing"
readme = "README.rst"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
authors = [{ name = "James Rowe", email = "jnrowe@gmail.com" }]
keywords = ["todo.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: DFSG approved",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: File Formats",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
homepage = "https://github.com/JNRowe/penelopise"
documentation = "https://jnrowe.github.io/penelopise/"
source = "https://github.com/JNRowe/penelopise"
issues = "https://github.com/JNRowe/penelopise/issues"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=6.1", "pytest-randomly>=3.16.0"]
doc = ["sphinx>=8.0"]
lint = ["ruff>=0.4"]

[tool.pytest.ini_options]
addopts = [
    "--cov-append",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov=penelopise",
    "--import-mode=importlib",
    "--pythonwarnings=error",
    "--strict-config",
    "--strict-markers",
]
minversion = "8.0"
testpaths = ["tests/"]
xfail_strict = true

[tool.ruff]
line-length = 80
target-version = "py313"
